assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Aboreto&family=Poppins&family=Sacramento&display=swap");

* {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: "Poppins", sans-serif;
}

:root {
  --primary-color: #002f5b;
  --white-color: #f3f3f3;
  --secondary-white-color: #a9a9a9;
  --secondary-blue-color: #004078;
}

/* ----- NAV BAR ----- */

#logo-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-left: 2rem;
  /* border: 5px solid red; */
}

#ferox-logo {
  font-family: "Sacramento", cursive;
  font-size: 3rem;
  margin-bottom: -1rem;
  color: var(--white-color);
}

#bar-grill-logo {
  font-family: "Aboreto", cursive;
  font-size: 1rem;
  margin-left: 0.2rem;
  color: var(--white-color);
}

.nav-link {
  color: var(--white-color);
  font-size: 1.1rem;
}

.nav-link:hover {
  color: var(--secondary-white-color);
}

.navbar-nav .nav-link.active,
.navbar-nav .nav-link.show {
  color: var(--secondary-white-color);
}

.navbar-toggler {
  color: var(--white-color);
  border: var(--bs-border-width) solid var(--white-color);
  background-color: white;
}

/* ----- NAV BAR ----- */

/* ----- Home Page ----- */

.hero-image {
  height: 50vh;
  width: 100vw;
  object-fit: cover;
}

.hero-text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 3rem;
}

.about-us-title {
  font-family: "Sacramento", cursive;
  font-size: 5rem;
}

.about-us-description {
  width: 60%;
  margin: 0.5rem 3rem;
  text-align: center;
}

.btn-primary {
  --bs-btn-color: var(--white-color);
  --bs-btn-bg: var(--primary-color);
  --bs-btn-border-color: var(--primary-color);
  --bs-btn-hover-color: var(--white-color);
  --bs-btn-hover-bg: var(--secondary-blue-color);
  --bs-btn-hover-border-color: var(--secondary-blue-color);
  --bs-btn-active-color: var(--white-color);
  --bs-btn-active-bg: var(--secondary-blue-color);
  --bs-btn-active-border-color: var(--secondary-blue-color);
  --bs-btn-disabled-color: var(--white-color);
  --bs-btn-disabled-bg: var(--primary-color);
  --bs-btn-disabled-border-color: var(--primary-color);
}

.btn {
  --bs-btn-border-radius: 0;
  color: var(--white-color);
  background-color: var(--primary-color);
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.services-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 3rem;
  flex-wrap: wrap;
  margin: 3rem 0;
  text-shadow: 3px 0px 9px #403b3e;
}

.service-item {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--white-color);
  text-align: center;
  background-repeat: no-repeat;
  background-size: 100% auto;
  height: 17rem;
  width: 17rem;
  object-fit: cover;
  object-position: right;
}

.service-item h1 {
  text-shadow: 3px 0px 9px #403b3e;
}

.service-one {
  background-image: url(../img/service-one.webp);
}

.service-two {
  background-image: url(../img/service-two.webp);
}

.service-three {
  background-image: url(../img/service-three.webp);
}

.service-four {
  background-image: url(../img/service-four.webp);
}

.reviews-section {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5rem;
  margin: 10rem 3rem;
}

.review-container {
  width: 15rem;
}

.review-image {
  height: 3rem;
  width: 3rem;
  border-radius: 50%;
  margin-right: 0.5rem;
}

.review-user-info {
  display: flex;
  justify-content: start;
  align-items: center;
}

.review-description {
  margin-top: 1rem;
}

/* ----- Home Page----- */

/* ----- Menu Page ----- */

.menu-category-container {
  display: flex;
  justify-content: center;
  margin: 5rem auto;
  width: 80%;
  gap: 3rem;
}

.menu-closing {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 60%;
  margin: -4rem auto 3rem auto;
}

.menu-item-container {
  display: flex;
  justify-content: space-between;
}

.menu-item {
  width: 90%;
}

.menu-item,
.menu-item-price {
  font-size: 1.1rem;
}

/* ----- Menu Page ----- */

/* ----- Gallery Page ----- */

.gallery-section {
  margin: 5rem 3rem;
}

/* ----- Gallery Page ----- */

/* ----- FOOTER ----- */

.footer-container {
  height: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--primary-color);
}

.footer-icon {
  color: var(--white-color);
  font-size: 2rem;
  transition: 0.3s;
  margin-right: 1rem;
  cursor: pointer;
  margin-bottom: 1.5rem;
}

.footer-icon:hover {
  color: var(--secondary-white-color);
}

.copyright {
  color: var(--white-color);
}

/* ----- FOOTER ----- */

